[package]
name = "unpak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
command-fds = "0.2.2"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
which = "4.4.0"
